# hyperdpi

./: .gitignore  CMakeLists.txt  README.md  traffic.pcap
config/: hyperdpi.cfg
rules/: dpi_rules.txt
src/: app_config.c  app_config.h  flow_table.c  flow_table.h  hyperscan_engine.c  hyperscan_engine.h  main.c  rx_thread.c  rx_thread.h  stats_thread.c  stats_thread.h  tx_thread.c  tx_thread.h  worker_thread.c  worker_thread.h
